[package]
name = "psvm"
version = "0.2.2"
description = "A tool to manage and update the Polkadot SDK dependencies in any Cargo.toml file."
repository = "https://github.com/paritytech/psvm"
authors = ["Parity Technologies <admin@parity.io>", "Patricio (patriciobcs)"]
edition = "2021"
include = ["src/**/*", "Cargo.toml"]
license = "Apache-2.0 OR GPL-3.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
toml_edit = "0.22.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.21"
env_logger = "0.11.3"
reqwest = { version = "0.12.3", features = ["json"] }
toml = "0.8.12"
tokio = { version = "1.37.0", features = ["full"] }
frame-benchmarking = { version = "25.0.0", default-features = false, optional = true }

[dev-dependencies]
pallet-balances = { version = "25.0.0" }
pallet-transaction-payment = { version = "25.0.0" }
tokio-test = "0.4"
mockito = "0.30"
