[package]
name = "psvm"
version = "0.2.5"
description = "A tool to manage and update the Polkadot SDK dependencies in any Cargo.toml file."
repository = "https://github.com/paritytech/psvm"
authors = ["Parity Technologies <admin@parity.io>", "Patricio (patriciobcs)"]
edition = "2021"
include = ["src/**/*", "Cargo.toml"]
license = "Apache-2.0 OR GPL-3.0"

[dependencies]
regex = "1.10.6"
clap = { version = "4.5", features = ["derive"] }
toml_edit = "0.22.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.21"
env_logger = "0.11.3"
reqwest = { version = "0.12.3", features = ["json"] }
toml = "0.8.12"
tokio = { version = "1.37.0", features = ["full"] }
dirs = "3.0"

[dev-dependencies]
tokio-test = "0.4"
mockito = "0.30"
